fix title bar overflow

--- a/src/renderer/components/TitleBar/TitleBar.module.scss
+++ b/src/renderer/components/TitleBar/TitleBar.module.scss
@@ -13,11 +13,14 @@
   position: absolute;
   top: 10px;
   text-align: center;
-  left: 0;
-  right: 0;
+  left: 75px;
+  right: 10px;
   margin: 0;
   font-size: 16px;
   font-weight: 400;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .buttons {
